--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "anthonyderecho",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^2.0.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
@@ -17,6 +18,7 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "string-hash": "^1.1.3"
+    "string-hash": "^1.1.3",
+    "winston": "^2.4.2"
   }
 }
