--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.1",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
+    "lodash": "^4.17.10",
     "mongoose": "^5.0.16",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
